--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link active bg-active link-navbar tebel-sedang me-3" href="./index.html">Home</a>
+                        <a class="nav-link link-navbar tebel-sedang me-3" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-navbar tebel-sedang me-3" href="./about.html">About</a>
+                        <a class="nav-link active bg-active link-navbar tebel-sedang me-3" href="../about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link-navbar tebel-sedang me-3" href="#">Services</a>
