--- a/about.html
+++ b/about.html
@@ -17,7 +17,6 @@
 
 <body>
 
-    <!-- <img src="./assets/HOME.png" class="bg" width="60%"> -->
 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light mt-3 fixed-top" id="navbar">
@@ -35,7 +34,7 @@
                         <a class="nav-link link-navbar tebel-sedang me-3" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active bg-active link-navbar tebel-sedang me-3" href="../about.html">About</a>
+                        <a class="nav-link active bg-active link-navbar tebel-sedang me-3" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link-navbar tebel-sedang me-3" href="#">Services</a>
@@ -59,28 +58,22 @@
     <div class="row mt-5 mb-5">
 
         <div class="col-lg-12 gambar">
-            <img src="./assets/HOME.png" width="100%">
+            <img src="./assets/PROFILE.png" width="100%">
         </div>
 
         <div class="col-sm-12 position-relative p-4">
 
             <div class="position-absolute top-0 end-0">
-                <img src="./assets/HOME.png" class="img">
+                <img src="./assets/PROFILE.png" class="img">
             </div>
 
-            <h1 class="display-6 text-truncate tebel-sedang">Percayakan bisnis anda</h1>
-            <h1 class="display-6 text-truncate tebel-sedang">bersama Ever<span style="color: #6A69D3;">tide.</span></h1>
+            <h1 class="display-6 text-truncate tebel-sedang">Hi, Nama saya<br><span style="color: #6A69D3;">Robin Setiyawan.</span></h1>
 
             <div class="desc mt-4">
-                <p>Keterbatasan waktu dan tenaga bukan masalah lagi bagi anda. Sudahkah mempercayakan website Anda bersama evertide? </p>
+                <p style="text-align: justify;">UI & UX Designer<br>
+                </p>
+                <p style="color: #353376;">Saya, adalah seoarang mahasiswa semester 3 - S1 Sistem Informasi di salah satu perguruan tinggi swasta di Indonesia (Universitas Respati Yogyakarta).</p>
             </div>
-
-            <div class="mt-5">
-                <a href="#" class="button rounded-pill shadow tebel-sedang">Learn More</a>
-                &nbsp;
-                <a href="#" class="link">or contact</a>
-            </div>
-            <br>
         </div>
     </div>
 </div>
