--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 <body>
 
-    <!-- <img src="./assets/HOME.png" class="bg" width="60%"> -->
-
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light mt-3 fixed-top" id="navbar">
         <div class="container">
@@ -72,11 +70,11 @@
             <h1 class="display-6 text-truncate tebel-sedang">bersama Ever<span style="color: #6A69D3;">tide.</span></h1>
 
             <div class="desc mt-4">
-                <p>Keterbatasan waktu dan tenaga bukan masalah lagi bagi anda. Sudahkah mempercayakan website Anda bersama evertide? </p>
+                <p>Keterbatasan waktu dan tenaga bukan masalah lagi bagi anda. Sudahkah mempercayakan bisnis Anda bersama evertide? </p>
             </div>
 
             <div class="mt-5">
-                <a href="#" class="button rounded-pill shadow tebel-sedang">Learn More</a>
+                <a href="#" class="button rounded-pill shadow tebel-sedang">Join us</a>
                 &nbsp;
                 <a href="#" class="link">or contact</a>
             </div>
