--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <a class="nav-link link-navbar tebel-sedang me-3" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-navbar tebel-sedang me-3" href="#">Services</a>
+                        <a class="nav-link link-navbar tebel-sedang me-3" href="./services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-navbar tebel-sedang me-3" href="#">Contact</a>
+                        <a class="nav-link link-navbar tebel-sedang me-3" href="./contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link bg-custom rounded tebel-sedang shadow" id="btn-sign">Get Started</a>
