edit services ke portofolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link link-navbar tebel-sedang me-3" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-navbar tebel-sedang me-3" href="./services.html">Services</a>
+                        <a class="nav-link link-navbar tebel-sedang me-3" href="./portofolio.html">Portofolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link-navbar tebel-sedang me-3" href="./contact.html">Contact</a>
@@ -76,7 +76,7 @@
             <div class="mt-5">
                 <a href="#" class="button rounded-pill shadow tebel-sedang">Join us</a>
                 &nbsp;
-                <a href="#" class="link">or contact</a>
+                <a href="./contact.html" class="link">or contact</a>
             </div>
             <br>
         </div>
