--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                         <a class="nav-link link-navbar tebel-sedang me-3" href="./about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-navbar tebel-sedang me-3" href="./services.html">Services</a>
+                        <a class="nav-link link-navbar tebel-sedang me-3" href="./portofolio.html">Portofolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active bg-active link-navbar tebel-sedang me-3" href="./contact.html">Contact</a>
