--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 <img src="./assets/HOME.png" class="img">
             </div>
 
-            <h1 class="display-6 text-truncate tebel-sedang">Percayakan bisnis anda</h1>
+            <h1 class="display-6 text-truncate tebel-sedang">Percayakan acara anda</h1>
             <h1 class="display-6 text-truncate tebel-sedang">bersama Ever<span style="color: #6A69D3;">tide.</span></h1>
 
             <div class="desc mt-4">
-                <p>Keterbatasan waktu dan tenaga bukan masalah lagi bagi anda. Sudahkah mempercayakan bisnis Anda bersama evertide? </p>
+                <p>Keterbatasan alat dan tenaga bukan masalah lagi bagi anda. Sudahkah mempercayakan acara spesial Anda bersama evertide? </p>
             </div>
 
             <div class="mt-5">
