--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <h1 class="display-6 text-truncate tebel-sedang">Hi, Nama saya<br><span style="color: #6A69D3;">Robin Setiyawan.</span></h1>
 
             <div class="desc mt-4">
-                <p style="text-align: justify;">UI & UX Designer<br>
+                <p style="text-align: justify;">Photorafer & Editor<br>
                 </p>
                 <p style="color: #353376;">Saya, adalah seoarang mahasiswa semester 3 - S1 Sistem Informasi di salah satu perguruan tinggi swasta di Indonesia (Universitas Respati Yogyakarta).</p>
             </div>
