--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    
+    <!-- CSS PRIBADI -->
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/body.css">
     <link rel="stylesheet" href="./css/responsive.css">
 
-    <title>Landing Page 7</title>
+    <title>UAS WEB DESAIN</title>
 </head>
 
 <body>
